--- a/join.html
+++ b/join.html
@@ -5,10 +5,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
 	    <!-- 위 3개의 메타 태그는 *반드시* head 태그의 처음에 와야합니다; 어떤 다른 콘텐츠들은 반드시 이 태그들 *다음에* 와야 합니다 -->
-	    <title>부트스트랩 101 템플릿</title>
+	    <title>뺌::회원가입</title>
 	
 	    <!-- 부트스트랩 -->
 	    <link href="css/bootstrap.min.css" rel="stylesheet">
+	    <link href="css/style.css" rel="stylesheet">
 	
 	    <!-- IE8 에서 HTML5 요소와 미디어 쿼리를 위한 HTML5 shim 와 Respond.js -->
 	    <!-- WARNING: Respond.js 는 당신이 file:// 을 통해 페이지를 볼 때는 동작하지 않습니다. -->
@@ -19,26 +20,26 @@
 	</head>
 	<body>
 		<div class="container">
-			<form method=post action='join.jsp'>
+			<form method="post" action='join.jsp'>
 				<div class = "form-group">
-					<label class=heading for=name>이름:</label>
+					<label class="heading" for="name">이름:</label>
 					<input type="text" name="id" id="id"/> <br>
 				</div>
 				<div class = "form-group">
-					<label class=heading for=passwd>패스워드:</label>
-					<input type=password name=passwd id="passwd"/> <br>
+					<label class="heading" for="passwd">패스워드:</label>
+					<input type="password" name="passwd" id="passwd"/> <br>
 				</div>
-				<div>
-					<label class=heading for=passwd>패스워드확인:</label>
-					<input type=password name=passwd2 id="passwd2"/> <br>
+				<div class = "form-group">
+					<label class="heading" for="passwd2">패스워드확인:</label>
+					<input type="password" name="passwd2" id="passwd2"/> <br>
 				</div>
-				<div>
-					<label class=heading for=name>전화번호:</label>
-					<input type=text name=phone id="iphone"/> <br><br>
+				<div class = "form-group">
+					<label class="heading" for="name">전화번호:</label>
+					<input type="text" name="phone" id="iphone"/> <br><br>
 				</div>
-				<input type=submit value="회원가입" class = "btn btn-default"/>
+				<input type="submit" value="회원가입" class = "btn btn-default"/>
 			</form>
-		</div>
+		</div><!-- /.container-->
 		<!-- jQuery (부트스트랩의 자바스크립트 플러그인을 위해 필요합니다) -->
 	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	    <!-- 모든 컴파일된 플러그인을 포함합니다 (아래), 원하지 않는다면 필요한 각각의 파일을 포함하세요 -->
