--- a/start.html
+++ b/start.html
@@ -18,7 +18,7 @@
 	      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	    <![endif]-->
 	</head>
-	<body>
+	<body class=" bg-dark">
 		<div class = "container">
 			<form method="post" action='login.html'>
 				<div class = "form-group">
@@ -30,12 +30,11 @@
 					<input type="text" name="passwd" id="passwd" class = "form-control"/> <br>
 				</div>
 	
-				<input type="submit" value="로그인" class= "btn btn-default"/>
-			
+				<input type="submit" value="로그인" class= "btn btn-default btn-lg btn-block"/>
 			</form>
 			<br>
 	
-			<a class="btn btn-default" href="join.html">join</a>
+			<a class="btn btn-default btn-lg btn-block" href="join.html">join</a>
 				
 			<!-- jQuery (부트스트랩의 자바스크립트 플러그인을 위해 필요합니다) -->
 		    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
