--- a/start.html
+++ b/start.html
@@ -18,24 +18,25 @@
 	      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	    <![endif]-->
 	</head>
-	<body class=" bg-dark">
-		<div class = "container">
+	<body class="bg-dark">
+		<div class="container">
+			<div class="logo-typo center">
+				<h1>baaam.</h1>
+			</div>
 			<form method="post" action='login.html'>
-				<div class = "form-group">
-					<label class="heading" for="id">아이디:</label>
-					<input type="text" name="id" id="id" class = "form-control"/> <br>
+				<div class = "form-group form-group-lg">
+					<input type="text" name="id" id="id" placeholder="아이디" class="form-control"/> <br>
 				</div>
-				<div class = "form-group">
-					<label class="heading" for="passwd">패스워드:</label>
-					<input type="text" name="passwd" id="passwd" class = "form-control"/> <br>
+				<div class = "form-group form-group-lg">
+					<input type="text" name="passwd" id="passwd" placeholder="비밀번호" class = "form-control"/> <br>
 				</div>
-	
-				<input type="submit" value="로그인" class= "btn btn-default btn-lg btn-block"/>
+				<div class="form-group">
+					<input type="submit" value="로그인" class= "btn btn-primary btn-lg btn-block"/>
+				</div>
 			</form>
-			<br>
-	
-			<a class="btn btn-default btn-lg btn-block" href="join.html">join</a>
-				
+			<div class="form-group">
+				<a class="btn btn-default btn-lg btn-block" href="join.html">join</a>
+			</div>
 			<!-- jQuery (부트스트랩의 자바스크립트 플러그인을 위해 필요합니다) -->
 		    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 		    <!-- 모든 컴파일된 플러그인을 포함합니다 (아래), 원하지 않는다면 필요한 각각의 파일을 포함하세요 -->
