--- a/join.html
+++ b/join.html
@@ -18,26 +18,26 @@
 	      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	    <![endif]-->
 	</head>
-	<body class="bg-dark">
+	<body>
 		<div class="container">
 			<form method="post" action='join.jsp'>
 				<div class = "form-group">
 					<label class="heading" for="name">이름:</label>
-					<input class="form-control" type="text" name="id" id="id"/> <br>
+					<input type="text" name="id" id="id"/> <br>
 				</div>
 				<div class = "form-group">
 					<label class="heading" for="passwd">패스워드:</label>
-					<input class="form-control" type="password" name="passwd" id="passwd"/> <br>
+					<input type="password" name="passwd" id="passwd"/> <br>
 				</div>
 				<div class = "form-group">
 					<label class="heading" for="passwd2">패스워드확인:</label>
-					<input class="form-control" type="password" name="passwd2" id="passwd2"/> <br>
+					<input type="password" name="passwd2" id="passwd2"/> <br>
 				</div>
 				<div class = "form-group">
 					<label class="heading" for="name">전화번호:</label>
-					<input class="form-control"s type="text" name="phone" id="iphone"/> <br><br>
+					<input type="text" name="phone" id="iphone"/> <br><br>
 				</div>
-				<input type="submit" value="회원가입" class="btn btn-default btn-lg btn-block"/>
+				<input type="submit" value="회원가입" class = "btn btn-default"/>
 			</form>
 		</div><!-- /.container-->
 		<!-- jQuery (부트스트랩의 자바스크립트 플러그인을 위해 필요합니다) -->
