--- a/index_none.html
+++ b/index_none.html
@@ -6,8 +6,8 @@ and open the template in the editor.
 -->
 <html>
     <head>
-            <meta charset="utf-8">
-            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
 	    <!-- 위 3개의 메타 태그는 *반드시* head 태그의 처음에 와야합니다; 어떤 다른 콘텐츠들은 반드시 이 태그들 *다음에* 와야 합니다 -->
 	    <title>뺌::메인화면</title>
@@ -24,9 +24,12 @@ and open the template in the editor.
 	    <![endif]-->
 	</head>
     <body>
+    	<div class="form-group">
         <form action="addaccount.html">
-		<input type="submit" value="추가">
-	</form>
+			<input class="btn btn-default btn-lg btn-block"   type="submit" value="추가">
+
+		</form>
+	</div>
         <!-- jQuery (부트스트랩의 자바스크립트 플러그인을 위해 필요합니다) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <!-- 모든 컴파일된 플러그인을 포함합니다 (아래), 원하지 않는다면 필요한 각각의 파일을 포함하세요 -->
