start - login - index_none 연결

--- a/start.html
+++ b/start.html
@@ -23,7 +23,7 @@
 			<div class="logo-typo center">
 				<h1>baaam.</h1>
 			</div>
-			<form method="post" action='login.html'>
+			<form method="post" action='login.jsp'>
 				<div class = "form-group form-group-lg">
 					<input type="text" name="id" id="id" placeholder="아이디" class="form-control"/> <br>
 				</div>
