--- a/index_none.html
+++ b/index_none.html
@@ -24,12 +24,31 @@ and open the template in the editor.
 	    <![endif]-->
 	</head>
     <body>
-    	<div class="form-group">
-        <form action="addaccount.html">
-			<input class="btn btn-default btn-lg btn-block"   type="submit" value="추가">
-
-		</form>
-	</div>
+    	<nav class="navbar navbar-default">
+    		<div class='container'>
+    			<div class="navbar-header">
+			      	<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+				        <span class="sr-only">Toggle navigation</span>
+				        <span class="icon-bar"></span>
+				        <span class="icon-bar"></span>
+				        <span class="icon-bar"></span>
+			      	</button>
+			      	<a class="navbar-brand" href="#"><span class="glyphicon glyphicon-chevron-left"></span></a>
+			      	<a class="navbar-brand" href="#"><img src="image/logo40.png"></a>
+			      	<a class="navbar-brand" href="#">baaam.</a>
+			    </div>
+	    		
+    		</div>
+    	</nav>
+    	<div class="container">
+    		<div class="center">
+        		<a class="icon icon-empty" href="addaccount.html">
+        			<span class="glyphicon glyphicon-plus"></span>
+        			<p>출금계좌를 등록하세요!</p>
+        		
+        		</a>
+			</div>
+		</div>
         <!-- jQuery (부트스트랩의 자바스크립트 플러그인을 위해 필요합니다) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <!-- 모든 컴파일된 플러그인을 포함합니다 (아래), 원하지 않는다면 필요한 각각의 파일을 포함하세요 -->
