--- a/chart.html
+++ b/chart.html
@@ -18,7 +18,7 @@
 		    <!-- 모든 컴파일된 플러그인을 포함합니다 (아래), 원하지 않는다면 필요한 각각의 파일을 포함하세요 -->
 		    <script src="js/bootstrap.min.js"></script>
 		
-		<script src="js/Chart.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.js"></script>
 		
 		</div>
 	</body>
