--- a/start.html
+++ b/start.html
@@ -28,7 +28,7 @@
 					<input type="text" name="id" id="id" placeholder="아이디" class="form-control"/> <br>
 				</div>
 				<div class = "form-group form-group-lg">
-					<input type="text" name="passwd" id="passwd" placeholder="비밀번호" class = "form-control"/> <br>
+					<input type="password" name="passwd" id="passwd" placeholder="비밀번호" class = "form-control"/> <br>
 				</div>
 				<div class="form-group">
 					<input type="submit" value="로그인" class= "btn btn-primary btn-lg btn-block"/>
