--- a/addaccount.html
+++ b/addaccount.html
@@ -36,8 +36,9 @@
 			        <span class="icon-bar"></span>
 			        <span class="icon-bar"></span>
 		      	</button>
-		      	<a class="navbar-brand" href="chart.html"><span class="glyphicon glyphicon-chevron-left"></span></a>
-		      	<a class="navbar-brand" href="#">출금계좌 등록</a>
+		      	<a class="navbar-brand" href="#"><span class="glyphicon glyphicon-chevron-left"></span></a>
+		      	<a class="navbar-brand" href="#"><img src="image/logo40.png"></a>
+		      	<a class="navbar-brand" href="#">baaam.</a>
 		    </div>
     		
 		</div>
