--- a/chart.html
+++ b/chart.html
@@ -11,7 +11,26 @@
 	<link href="css/style.css" rel="stylesheet">
 </head>
 <body>
+	<nav class="navbar navbar-default">
+		<div class='container'>
+			<div class="navbar-header">
+		      	<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+			        <span class="sr-only">Toggle navigation</span>
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+		      	</button>
+		      	<a class="navbar-brand" href="chart.html"><span class="glyphicon glyphicon-chevron-left"></span></a>
+		      	<a class="navbar-brand" href="#">출금계좌 등록</a>
+		    </div>
+    		
+		</div>
+	</nav>
+	<div class="container">
+		<h1>내 계좌 </h1>
+	</div>
 	<div class = "container">
+		<h1>이체 계좌 관리 </h1>
 		<canvas id="myChart" width="256" height="256" style="width: 256px; height: 256px;"></canvas>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 		<script src="js/jquery-2.1.4.min.js"></script>
