--- a/addaccount.html
+++ b/addaccount.html
@@ -36,15 +36,15 @@
 			        <span class="icon-bar"></span>
 			        <span class="icon-bar"></span>
 		      	</button>
-		      	<a class="navbar-brand" href="#"><span class="glyphicon glyphicon-chevron-left"></span></a>
-		      	<a class="navbar-brand" href="#"><img src="image/logo40.png"></a>
-		      	<a class="navbar-brand" href="#">baaam.</a>
+		      	<a class="navbar-brand" href="index_none.html"><span class="glyphicon glyphicon-chevron-left"></span></a>
+		      	<a class="navbar-brand" href="index_none.html"><img src="image/logo40.png"></a>
+		      	<a class="navbar-brand" href="index_none.html">baaam.</a>
 		    </div>
     		
 		</div>
 	</nav>
     <div class="container">
-	<form action="certification.html">
+	<form action="chart.html">
         <div class="form-group">
             <label for="Bank">은행</label>
     		<select class="form-control" name="Bank">
