--- a/chart.html
+++ b/chart.html
@@ -19,8 +19,8 @@
 			        <span class="icon-bar"></span>
 			        <span class="icon-bar"></span>
 		      	</button>
-		      	<a class="navbar-brand" href="chart.html"><span class="glyphicon glyphicon-chevron-left"></span></a>
-		      	<a class="navbar-brand" href="#">출금계좌 등록</a>
+		      	<a class="navbar-brand" href="addaccount.html"><span class="glyphicon glyphicon-chevron-left"></span></a>
+		      	<a class="navbar-brand" href="addaccount.html">출금계좌 등록</a>
 		    </div>
     		
 		</div>
