--- a/index_none.html
+++ b/index_none.html
@@ -33,9 +33,9 @@ and open the template in the editor.
 				        <span class="icon-bar"></span>
 				        <span class="icon-bar"></span>
 			      	</button>
-			      	<a class="navbar-brand" href="#"><span class="glyphicon glyphicon-chevron-left"></span></a>
-			      	<a class="navbar-brand" href="#"><img src="image/logo40.png"></a>
-			      	<a class="navbar-brand" href="#">baaam.</a>
+			      	<a class="navbar-brand" href="start.html"><span class="glyphicon glyphicon-chevron-left"></span></a>
+			      	<a class="navbar-brand" href="start.html"><img src="image/logo40.png"></a>
+			      	<a class="navbar-brand" href="start.html">baaam.</a>
 			    </div>
 	    		
     		</div>
