chart 계산 자동화

--- a/addaccount.html
+++ b/addaccount.html
@@ -44,7 +44,7 @@
 		</div>
 	</nav>
     <div class="container">
-	<form action="chart.html">
+	<form action="chart.jsp">
         <div class="form-group">
             <label for="Bank">은행</label>
     		<select class="form-control" name="Bank">
@@ -91,6 +91,7 @@
           <label for="acc_nick">통장 별명</label>
 		  <input class="form-control" type="text" name="acc_nick">
         </div>
+        <input type="hidden" name="balance" value="3000000"/>
         <div class="form-group">
 		  <input class="btn btn-default btn-lg btn-block" type="submit" value="전송">
         </div>
