--- a/addregulartransfer.html
+++ b/addregulartransfer.html
@@ -36,14 +36,14 @@
 			        <span class="icon-bar"></span>
 			        <span class="icon-bar"></span>
 		      	</button>
-		      	<a class="navbar-brand" href="chart.html"><span class="glyphicon glyphicon-chevron-left"></span></a>
+		      	<a class="navbar-brand" href="chart.jsp"><span class="glyphicon glyphicon-chevron-left"></span></a>
 		      	<a class="navbar-brand" href="#">자동 이체 등록</a>
 		    </div>
     		
 		</div>
 	</nav>
     <div class="container">
-	<form action="chart.html" >
+	<form action="chart.jsp" >
         <div class="form-group">
           <label for="regular_name">자동 이체 내용</label>
           <input class="form-control" type="text" name="regular_name">
