--- a/modify_regular.html
+++ b/modify_regular.html
@@ -55,8 +55,7 @@
         		<li>
         			<a>
         				<p>매달 xx일</p>
-        				<h3>주택청약 <span class="float-right">123122100원</span></h3>
-        				        				
+        				<h3>주택청약 <span class="float-right">123122100원</span></h3>      				
         			</a>
         		</li>
         		<li>
@@ -68,6 +67,9 @@
         		</li>
         	</ul>
         </div>
+        <div class="form-group">
+			<a class="btn btn-default btn-lg btn-block" href="join.html">추가</a>
+		</div>
        
             <!-- jQuery (부트스트랩의 자바스크립트 플러그인을 위해 필요합니다) -->
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
